--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
+		"@csstools/postcss-oklab-function": "^4.0.7",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@faker-js/faker": "^9.4.0",
